more fixes edge cases and documentation update